# rdagent-quant-opt

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: ANTI_DECAY.md  DATA_SOURCES.md  DEBATE_SYSTEM.md  SETUP_GUIDE.md  USER_MANUAL.md  WORKFLOW.md
rdagent-quant-opt/: .env.example  .gitignore  README.md  requirements.txt
rdagent-quant-opt/configs/: default.yaml
rdagent-quant-opt/docs/: ARCHITECTURE.md  COST_ANALYSIS.md
scripts/: compare_runs.py  download_databento.py  run_backtest.sh  run_pipeline.py  security_check.sh  setup.sh
src/: __init__.py  alpha_filter.py  data_provider.py  data_validator.py  debate_agents.py  experience_memory.py  external_scout.py  factor_library.py  factor_reviewer.py  factor_translator.py  fundamental_analyst.py  investment_principles.py  market_regime.py  model_router.py  param_optimizer.py  pipeline.py  position_guard.py  qlib_backtester.py  report_generator.py  self_optimizer.py  survivorship_bias.py  trajectory_evolution.py
tests/: test_advanced_debate.py  test_alpha_filter.py  test_data_validator.py  test_debate.py  test_experience_memory.py  test_external_scout.py  test_factor_library.py  test_factor_reviewer.py  test_factor_translator.py  test_fundamental_analyst.py  test_investment_principles.py  test_market_regime.py  test_param_optimizer.py  test_pipeline.py  test_position_guard.py  test_qlib_backtest.py  test_report_generator.py  test_router.py  test_self_optimizer.py  test_survivorship.py  test_trajectory.py
(+6 files in other folders)
